<?xml version="1.0"?>
<package format="2">
  <name>particle_filter_msgs</name>
  <version>0.0.1</version>
  <description>The particle_filter_msgs package</description>

  <maintainer email="max.innocentini@gmail.com">mxm0</maintainer>
  <author email="max.innocentini@gmail.com">Massimo Innocentini</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
